# chadfetch

./: Cargo.toml  LICENSE  README.md  chadfetch.core  text.txt
src/: all_systems.rs  args.rs  fetch_info.rs  get_info.rs  libc.rs  logos.rs  main.rs  os_names.rs  palette.rs  system.rs  utils.rs
src/get_info/: bsd.rs  get_all_systems.rs  linux.rs  linux_pkgs.rs  unix.rs
