[package]
name = "rustfetch"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
debug = false
strip = true
opt-level = 's'
codegen-units = 1
lto = true
panic = 'abort'


[profile.dev]
opt-level = 's'
lto = true
panic = 'abort'


[dependencies]
libc = "*"
