[package]
name = "chadfetch"
version = "0.1.0"
edition = "2021"
authors = ["Vadim Wagner <gidra4367@protonmail.com>"]
repository = "https://gitlab.com/vada4367/rfetch"
license-file = "LICENSE"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
debug = false
#strip = true
opt-level = 'z'
codegen-units = 1
lto = true
panic = 'abort'


[profile.dev]
opt-level = 's'
lto = true
panic = 'abort'


[dependencies]
libc = "*"
