[package]
name = "chadfetch"
version = "0.2.3"
edition = "2021"
authors = ["Vadim Wagner <gidra4367@protonmail.com>"]
description = "Console utilite for watch info about your system"
repository = "https://gitlab.com/vada4367/rfetch"
license-file = "LICENSE"
#catigories = ["command-line-utilities"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
debug = false
opt-level = 'z'
codegen-units = 1
lto = true
panic = 'abort'
#strip = true


[profile.dev]
opt-level = 's'
lto = true
panic = 'abort'


[dependencies]
libc = "0.2.152"
